Updates to history, pad and profile components.

--- a/src/components/templates/Pad/Pad.scss
+++ b/src/components/templates/Pad/Pad.scss
@@ -36,7 +36,8 @@
     position: relative;
     text-align: left;
 
-    & > div {
+    &-content{
+      overflow: auto;
       height: 100%;
       position: absolute;
       width: 100%;
