--- a/src/components/templates/Profile/Profile.scss
+++ b/src/components/templates/Profile/Profile.scss
@@ -27,16 +27,17 @@
   }
 
   .change-image {
-      background: green;
-      border-radius: 10px;
-      bottom: 0;
-      justify-content: center;
-      margin-top: -30px;
-      padding: 10px;
-      position: absolute;
-      text-align: center;
-      width: 100%;
-    }
+    background: green;
+    border-radius: 10px;
+    bottom: 0;
+    color: white;
+    justify-content: center;
+    margin-top: -30px;
+    padding: 10px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+  }
 
   &__pet_data,
   &__pet_social {
