Component and style improvements.

--- a/src/components/atoms/DrawerNavItem/DrawerNavItem.scss
+++ b/src/components/atoms/DrawerNavItem/DrawerNavItem.scss
@@ -18,4 +18,11 @@
     background-color: #999999;
     opacity: 10%;
   }
+
+  .premium {
+    color: #FF8965;
+    font-weight: 700;
+    font-style: italic;
+    display: block;
+  }
 }
