--- a/src/components/templates/Pad/Pad.scss
+++ b/src/components/templates/Pad/Pad.scss
@@ -1,4 +1,10 @@
 .pad {
+  .chrome {
+    &__content {
+      margin: 0;
+    }
+  }
+
   &__moods,
   &__note,
   &__attachments {
@@ -35,13 +41,8 @@
     min-height: 220px;
     position: relative;
     text-align: left;
-
-    &-content{
-      overflow: auto;
-      height: 100%;
-      position: absolute;
-      width: 100%;
-    }
+    max-height: 300px;
+    overflow: auto;
   }
 
   &__attachments {
