--- a/src/components/templates/Pad/Pad.scss
+++ b/src/components/templates/Pad/Pad.scss
@@ -43,6 +43,13 @@
     text-align: left;
     max-height: 300px;
     overflow: auto;
+
+    &-content{
+      overflow: auto;
+      height: 100%;
+      position: absolute;
+      width: 100%;
+    }
   }
 
   &__attachments {
