--- a/src/components/organism/LogEntry/LogEntry.scss
+++ b/src/components/organism/LogEntry/LogEntry.scss
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10px 35px;
-    text-align: center;
+    margin: 10px;
+    align-items: center;
+    width: 100%;
 
     & > h3 {
       text-align: left;
@@ -16,7 +17,7 @@
       border-radius: 5px;
       min-height: 120px;
       text-align: left;
-      width: 300px;
+      width: 90%;
       max-height: 300px;
       overflow: auto;
       position: relative;
