--- a/src/components/molecules/Hero/Hero.scss
+++ b/src/components/molecules/Hero/Hero.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   min-height: calc(90vh - 60px);
+  background-position-x: center;
 
   &__content {
     margin-top: 200px;
