--- a/src/components/templates/Profile/Profile.scss
+++ b/src/components/templates/Profile/Profile.scss
@@ -65,7 +65,6 @@
 
   label {
     margin-top: 15px;
-    margin-left: 20px;
   }
 
   form {
@@ -75,13 +74,12 @@
     width: 90%;
   }
 
-  input,
-  textarea {
-    width: 90%;
+  select {
+    width: 103%;
+    height: 48px;
   }
 
-  select {
-    width: 95%;
-    height: 48px;
+  .secondary_cta {
+    width: 102%;
   }
 }
