UI improvements and style enhancements. Added Auth0 endpoint which redirects back to registration process.

--- a/src/components/templates/RegisterStageThree/RegisterStageThree.scss
+++ b/src/components/templates/RegisterStageThree/RegisterStageThree.scss
@@ -1,4 +1,8 @@
 .register-stage-three {
+  .secondary_cta {
+    width: 100%;
+  }
+
   align-items: center;
   display: flex;
   flex-direction: column;
